Integrate managed containers with ContainerBuilder API